# ais

./: CLAUDE.md  Cargo.toml  README.en.md  README.md  Taskfile.yml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
src/: control.rs  error.rs  lib.rs  main.rs
src/fetch/: digest.rs  mod.rs
src/parse/: circuits.rs  devices.rs  energy.rs  generic.rs  mod.rs  power.rs
tests/: parse_fixtures.rs
tests/fixtures/: circuit_catalog_734.html  devices_airpurifier_page1.html  devices_lighting_page1.html  devices_top.html  electricflow_1113_page1.html  electricflow_1113_page2.html  graph_val_kwh.html  index.html  power_update_buy.json  power_update_sell.json
tools/: e2e.sh  mock-aiseg2.py
