[package]
name = "ais"
version = "0.1.0"
edition = "2021"
description = "Panasonic AiSEG2 専用 CLI — 電力データの読み取りと機器コントロール"
license = "MIT"
repository = "https://github.com/nogu3/ais"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
md5 = "0.7"
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# AiSEG2 は LAN 内の平文 HTTP のみのため TLS 系の default features を外す
ureq = { version = "3", default-features = false }

[profile.release]
lto = true
strip = true
